LW-1141 Fix chat box not showing on chat page. Fix some styling and inconsistencies.

--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -4175,6 +4175,10 @@ section.group .modal-footer button {
   width: calc(100% - 32px); /* account for padding on parent container */
 }
 
+.libraryh3lp {
+  display: flex; /* prevents slight gap between bottom of iframe and container */
+}
+
 @media screen and (min-width: 62em) {
   .side-nav.column-md {
     display: inline;
